Fix totalVotes & indexing